--- a/htmljs/src/setup.html
+++ b/htmljs/src/setup.html
@@ -9,33 +9,32 @@
     <script type="text/javascript" src="js/vendor/bwf.js"></script>
     <script type="text/javascript" src="js/shared.js"></script>
     <script type="text/javascript" src="js/script-setup.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="style-setup.css">
 </head>
 
-<body onload=init()>
+<body onload="init()">
 
     <!-- build:include partials/header.html -->
     <!-- /build -->
     <div viewport>
         <div class="navbar corner-top corner-bottom">
             <span class="bar-title">Device List</span>
-            <button onclick=backup()>Backup</button>
-            <button onclick=restore()>Restore</button>
-            <button onclick=erase()>Erase EEPROM</button>
-            <button onclick=list()>Refresh Device List</button>
+            <button onclick="backup()">Backup</button>
+            <button onclick="restore()">Restore</button>
+            <button onclick="erase()">Erase EEPROM</button>
+            <button onclick="list()">Refresh Device List</button>
         </div>
         <div id="device-list">
             <div id="installed-device">Installed Device</div>
             <div id="installed-list"></div>
             <div id="detected-device">Detected Device</div>
-            <div id="detected-list">
-            </div>
+            <div id="detected-list"></div>
         </div>
         <div class='device-container extsensor-device'>
             <table>
                 <tr>
-                    <td ROWSPAN=2>
+                    <td rowspan='2'>
                         <div class='device-title'></div>
                         <br>
                         <button>apply</button>
@@ -94,10 +93,10 @@
                         <div class='device-setting-container'>
                             <span class='setting-name'>Function</span>
                             <select class='setting-value device-function'>
-                                <option value=0>None</option>
-                                <option value=5>Chamber Temp</option>
-                                <option value=6>Room Temp</option>
-                                <option value=9>Beer Temp</option>
+                                <option value='0'>None</option>
+                                <option value='5'>Chamber Temp</option>
+                                <option value='6'>Room Temp</option>
+                                <option value='9'>Beer Temp</option>
                             </select>
                         </div>
                     </td>
@@ -108,7 +107,7 @@
         <div class='device-container sensor-device'>
             <table>
                 <tr>
-                    <td ROWSPAN=2>
+                    <td rowspan='2'>
                         <div class='device-title'></div>
                         <br>
                         <button>apply</button>
@@ -167,10 +166,10 @@
                         <div class='device-setting-container'>
                             <span class='setting-name'>Function</span>
                             <select class='setting-value device-function'>
-                                <option value=0>None</option>
-                                <option value=5>Chamber Temp</option>
-                                <option value=6>Room Temp</option>
-                                <option value=9>Beer Temp</option>
+                                <option value='0'>None</option>
+                                <option value='5'>Chamber Temp</option>
+                                <option value='6'>Room Temp</option>
+                                <option value='9'>Beer Temp</option>
                             </select>
                         </div>
                     </td>
@@ -181,7 +180,7 @@
         <div class='device-container pin-device'>
             <table>
                 <tr>
-                    <td ROWSPAN=2>
+                    <td rowspan='2'>
                         <div class='device-title'></div>
                         <br>
                         <button>apply</button>
